# multi-label-hate-speech-detection

./: .gitignore  app.py  function.py  multiapp.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml  secrets.toml.example
apps/: best_result.py  home.py  indobert_hate_speech.py  multi_tweet.py  multitweet.py  single_tweet.py  singletweet.py  training_model.py  utils.py
apps/indonlu/utils/: data_utils.py  metrics.py
data/input/dataset/: re_multi_label_dataset.csv  re_multi_label_dataset.gsheet
data/output/best/: classification_report.csv  training_result.csv
data/output/dataset/: dataset_preprocessed.csv  dataset_testing.csv  dataset_training.csv  dataset_validation.csv
data/output/dataset/smote/: X_test.csv  X_train.csv  X_valid.csv  y_test.csv  y_train.csv  y_valid.csv
docs/: 140810180049.docx  140810180049_proposal.docx  Progress Mingguan.txt  comparison.pptx  hyperparameter_tuning.gsheet
models/: config.json  tokenizer.pkl  tokenizer_config.json
src/multi_label_hate_speech_detection/: indoBERT_hate_speech.ipynb
src/multi_label_hate_speech_detection/modeling/: indoBERT_hate_speech.ipynb  indoBERT_hate_speech_balance.ipynb
src/multi_label_hate_speech_detection/modeling/fine_tuning/: batch16_lr2e-5_epoch3.ipynb  batch16_lr3e-5_epoch2.ipynb  batch16_lr3e-5_epoch3.ipynb  batch16_lr5e-5_epoch3.ipynb  batch16_lr5e-5_epoch4.ipynb  batch32_lr2e-5_epoch2.ipynb  batch32_lr2e-5_epoch3.ipynb  batch32_lr3e-5_epoch2.ipynb  batch32_lr3e-5_epoch4.ipynb  batch32_lr5e-5_epoch2.ipynb
src/multi_label_hate_speech_detection/modeling/fine_tuning/balance/: batch16_lr2e-5_epoch2.ipynb  batch16_lr2e-5_epoch3.ipynb  batch16_lr2e-5_epoch4.ipynb  batch16_lr3e-5_epoch2.ipynb  batch16_lr3e-5_epoch3.ipynb  batch16_lr3e-5_epoch4.ipynb  batch16_lr5e-5_epoch2.ipynb  batch16_lr5e-5_epoch3.ipynb  batch16_lr5e-5_epoch4.ipynb  batch32_lr2e-5_epoch2.ipynb  (+8 more)
src/multi_label_hate_speech_detection/preprocessing/: text_preprocessing.ipynb
styles/: style.css
tests/: test_multi_label_hate_speech_detection.py
(+18 files in other folders)
