[tool.poetry]
name = "multi-label-hate-speech-detection"
version = "0.1.0"
description = "Multi label hate speech detection system is a system used to detect Indonesian text that classified is hate speech or non-hate speech."
license = "MIT"
authors = ["Rizky Anugerah <rizky18011@mail.unpad.ac.id>"]
readme = "README.rst"
repository = "https://github.com/ryzanugrah/multi-label-hate-speech-detection"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
streamlit = "^1.9.0"
black = "^22.3.0"
isort = "^5.10.1"
tweepy = "^4.9.0"
gdown = "^4.4.0"
pyunpack = "^0.2.2"
transformers = "^4.18.0"
st-material-table = "^0.0.4"
streamlit-metrics = "^0.1.0"
PySastrawi = "^1.2.0"
nltk = "^3.7"
imbalanced-learn = "^0.9.1"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
wheel = "^0.37.1"
nvidia-pyindex = "^1.0.9"
stqdm = "^0.0.4"
opencv-python = "^4.6.0"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.9.0+cu111 torchvision==0.10.0+cu111 torchaudio==0.9.0 --use-deprecated=html5lib -f https://download.pytorch.org/whl/torch_stable.html"